<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.ptidej.jct</groupId>
    <artifactId>jct-tools</artifactId>
    <version>1.0.0</version>
    <name>JCT Tools</name>

    <parent>
        <groupId>net.ptidej</groupId>
        <artifactId>all-ptidej</artifactId>
        <version>1.0.0</version>
    </parent>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>windows-1252</project.build.sourceEncoding>
    </properties>

    <dependencies>

<!--        <dependency>-->
<!--            <groupId>com.sun.tools</groupId>-->
<!--            <artifactId>javac</artifactId>-->
<!--            <version>1.0</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${pom.basedir}/lib/javac.jar</systemPath>-->
<!--        </dependency>-->

        <dependency>
            <groupId>net.ptidej.cpl</groupId>
            <artifactId>cpl-core</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>net.ptidej.jct</groupId>
            <artifactId>jct-core</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>net.ptidej.jct</groupId>
            <artifactId>jct-impl</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>net.ptidej.jct</groupId>
            <artifactId>jct-utils</artifactId>
            <version>1.0.0</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg><arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>